--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -27,7 +27,7 @@
           <strong>Current Plan:</strong> {{ currentUser.plan }}
         </li>
         <li class="list-group-item">
-          <strong>Restaurants:</strong>
+          <strong>Active Businesses:</strong>
           <ul>
             <li *ngFor="let restaurant of currentUser.restaurants">
               {{ restaurant.name }}
