--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -30,7 +30,7 @@
 }
 
 .home-right img {
-  width: 400px;
+  width: 350px;
   height: auto;
 }
 
@@ -41,14 +41,16 @@
   /* justify-content: center; */
 }
 
-.home-right h1 {
+.home-right h2 {
+  text-align: center;
   font-weight: bold;
-  color: white;
+  color: #fffef2;
 }
 
-.home-right p {
+.home-right h4 {
+  text-align: center;
   font-size: 1.4em;
-  color: white;
+  color: #fffef2;
 }
 
 .home-left img {
@@ -69,4 +71,17 @@
 
 .join-btn {
   margin: 20px 0 10px 0;
+}
+
+.contact-tracing-alert {
+  z-index: 999;
+  text-align: center;
+  background-color: #fffef2;
+  color: #816df2;
+  width: 100%;
+}
+
+/* mouse over link */
+.contact-tracing-alert a:hover {
+  color: #816df2;
 }
