--- a/src/app/components/pricing-plans/pricing-plans.component.html
+++ b/src/app/components/pricing-plans/pricing-plans.component.html
@@ -12,7 +12,7 @@
     <h2>Choose a plan that works for you!</h2>
     <div class="card-deck">
       <div class="card" *ngIf="!isLoggedIn">
-        <div class="card-header text-center">Base</div>
+        <div class="card-header text-center">Basic Menu Management</div>
         <div class="card-body text-center">
           <h1>$0</h1>
           <p>Free Plan</p>
@@ -25,16 +25,17 @@
             Select
           </button>
           <ul class="plan-feature-list">
-            <li>Ideal for menus that do not get updated often</li>
-            <li>Add up to 4 menus to your restaurant</li>
+            <li>Ideal for restaurants, bars and cafés</li>
+            <li>Add up to 4 menus</li>
             <li>Unlimited scans</li>
             <li>Update up to one menu per month</li>
-            <li>Optional customer checkin form for contact tracing</li>
+            <li>Optional customer checkin form integrated with your menus</li>
+            <li>A single QR code for all your business needs</li>
           </ul>
         </div>
       </div>
       <div class="card">
-        <div class="card-header text-center">Plus</div>
+        <div class="card-header text-center">Plus Menu Management</div>
         <div class="card-body text-center">
           <h1>$5.99</h1>
           <p>Every month</p>
@@ -48,17 +49,15 @@
             Start Free Trial
           </button>
           <ul class="plan-feature-list">
+            <li>Ideal for restaurants, bars and cafés</li>
             <li>Great for managing your menus frequently</li>
-            <li>Add up to 8 menus to your restaurant</li>
+            <li>Add up to 8 menus</li>
             <li>
               Manage your daily food and drink specials with unlimited menu
               updates
             </li>
-            <li>Optional customer checkin form for contact tracing</li>
-            <li>
-              A single QR code for your menus and your optional contact tracing
-              form
-            </li>
+            <li>Optional customer checkin form integrated with your menus</li>
+            <li>A single QR code for all your business needs</li>
           </ul>
         </div>
       </div>
@@ -77,17 +76,15 @@
             Start Free Trial
           </button>
           <ul class="plan-feature-list">
+            <li>Ideal for restaurants, bars and cafés</li>
             <li>Great for managing your menus frequently</li>
-            <li>Add up to 8 menus to your restaurant</li>
+            <li>Add up to 8 menus</li>
             <li>
               Manage your daily food and drink specials with unlimited menu
               updates
             </li>
-            <li>Optional customer checkin form for contact tracing</li>
-            <li>
-              A single QR code for your menus and your optional contact tracing
-              form
-            </li>
+            <li>Optional customer checkin form integrated with your menus</li>
+            <li>A single QR code for all your business needs</li>
           </ul>
         </div>
       </div>
