--- a/src/app/components/qr-code-viewer/qr-code-viewer.component.html
+++ b/src/app/components/qr-code-viewer/qr-code-viewer.component.html
@@ -14,26 +14,22 @@
         <div class="card card-container p-2">
           <div #qrcodecard>
             <div class="card-instructions">
-              <p *ngIf="language == 'FR' || language == 'FR/EN'">
-                Scannez pour le menu
-              </p>
-              <p *ngIf="language == 'ES' || language == 'ES/EN'">
-                Escanear para el menu
-              </p>
-              <p
-                *ngIf="
-                  language == 'EN' || language == 'FR/EN' || language == 'ES/EN'
-                "
+              <div
+                class="card-instruction-text"
+                [style.marginTop.px]="getMarginTop()"
               >
-                Scan for the menu
-              </p>
+                {{ instructionTextL1.value }}
+              </div>
+              <div class="card-instruction-text">
+                {{ instructionTextL2.value }}
+              </div>
             </div>
             <app-qrcode-card-svg [color]="restaurantColor">
             </app-qrcode-card-svg>
             <qrcode
               class="qr-code"
               [qrdata]="restaurantQrCode"
-              [width]="147"
+              [width]="180"
               [elementType]="'url'"
               [errorCorrectionLevel]="'M'"
             ></qrcode>
@@ -43,6 +39,12 @@
       <div class="col-md-auto">
         <div class="d-flex flex-column options-container">
           <div class="vertical-divider"></div>
+          <label for="instructionTextL1">Card Instruction Line 1</label>
+          <input #instructionTextL1 type="text" [(ngModel)]="firstLineText" />
+          <div class="vertical-divider"></div>
+          <label for="instructionTextL2">Card Instruction Line 2</label>
+          <input #instructionTextL2 type="text" [(ngModel)]="secondLineText" />
+          <div class="vertical-divider"></div>
           <div class="replication-select">
             <select
               class="browser-default custom-select"
@@ -50,19 +52,7 @@
             >
               <option selected value="1">1 x Page</option>
               <option value="4">4 x Page</option>
-            </select>
-          </div>
-          <div class="vertical-divider"></div>
-          <div class="language-select">
-            <select
-              class="browser-default custom-select"
-              (change)="onLanguageChange($event)"
-            >
-              <option selected value="EN">English</option>
-              <option value="FR">Français</option>
-              <option value="ES">Español</option>
-              <option value="FR/EN">Français/English</option>
-              <option value="ES/EN">Español/English</option>
+              <option value="9">9 x Page</option>
             </select>
           </div>
           <div class="vertical-divider"></div>
