--- a/src/app/components/qr-code-viewer/qr-code-viewer.component.scss
+++ b/src/app/components/qr-code-viewer/qr-code-viewer.component.scss
@@ -33,19 +33,27 @@
 .card-instructions {
   text-align: center;
   position: absolute;
-  font-size: 21px;
   font-weight: bold;
-  top: 135px;
+  top: 20px;
   left: 55px;
   width: 300px;
 }
 
-.card-instructions p {
-  margin-bottom: 5px;
+.card-instruction-text {
+  font-size: 32px;
+  font-weight: bold;
+  color: #816ef1;
+  // background: -webkit-linear-gradient(left, #816ef1, #72eddd);
+  // -webkit-background-clip: text;
+  // -webkit-text-fill-color: transparent;
+}
+
+.card-instruction-text .top-padding {
+  margin-top: 50px;
 }
 
 .qr-code {
   position: absolute;
-  top: 262px;
-  left: 135px;
+  top: 185px;
+  left: 120px;
 }
