--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -165,7 +165,7 @@
           >Valid
         </mdb-success>
       </div>
-      <div class="md-form">
+      <div class="md-form" *ngIf="selectedPlan !== 'contact-tracing'">
         <div class="d-flex">
           <span class="field-name">Select a plan:</span>
           <div class="country-select flex-fill">
