--- a/src/app/components/admin-board/admin-board.component.html
+++ b/src/app/components/admin-board/admin-board.component.html
@@ -1,7 +1,7 @@
 <div class="admin-board container-fluid">
   <div class="admin-board-content container">
     <div class="d-flex flex-column" *ngIf="accessAllowed">
-      <h2>All Restaurants</h2>
+      <h2>All Businesses</h2>
       <ul class="restaurants list-group">
         <li *ngFor="let restaurant of restaurants" class="list-group-item">
           <div class="container">
@@ -11,31 +11,32 @@
               </div>
               <div class="col-md-10">
                 <div class="row justify-content-end">
-                  <div class="col-sm-2">
+                  <div class="col-sm-auto">
                     <button
                       mat-raised-button
                       class="btn btn-block"
-                      (click)="goToRoute('/menus/' + restaurant._id)"
+                      (click)="goToRoute('/' + restaurant._id)"
                     >
-                      View Menus
+                      Preview
                     </button>
                   </div>
                   <div class="col-sm-auto">
                     <button
                       mat-raised-button
                       class="btn btn-block"
-                      (click)="goToRoute('/detail/' + restaurant._id)"
-                    >
-                      Manage Menus
-                    </button>
-                  </div>
-                  <div class="col-sm-2">
-                    <button
-                      mat-raised-button
-                      class="btn btn-block"
                       (click)="goToRoute('/qrcode/' + restaurant._id)"
                     >
-                      Get QR Code
+                      QR Code
+                    </button>
+                  </div>
+                  <div class="col-sm-auto">
+                    <button
+                      mat-mini-fab
+                      color="primary"
+                      aria-label="Edit and manage business"
+                      (click)="goToRoute('/detail/' + restaurant._id)"
+                    >
+                      <mat-icon>edit</mat-icon>
                     </button>
                   </div>
                 </div>
