--- a/src/app/components/business-portal-home/business-portal-home.component.scss
+++ b/src/app/components/business-portal-home/business-portal-home.component.scss
@@ -25,10 +25,9 @@
 }
 
 .cover-photo {
-  opacity: 50%;
-
-  height: 100%;
   width: 100%;
+  height: 100%;
+  opacity: 0.5;
 }
 
 .business-intro {
