update business portal top div and cover photo dimensions

--- a/src/app/components/business-portal-home/business-portal-home.component.html
+++ b/src/app/components/business-portal-home/business-portal-home.component.html
@@ -3,8 +3,8 @@
   *ngIf="!showSplashScreen"
   [ngClass]="{ 'top-padding': isLoggedIn }"
 >
-  <div class="top-div" [@fadeIn]>
-    <img class="cover-photo" [src]="currentRestaurant.coverPhotoUrl" />
+  <div class="top-div">
+    <img [@fadeIn] [src]="currentRestaurant.coverPhotoUrl" />
   </div>
   <div class="business-portal-home-content" *ngIf="currentRestaurant">
     <div class="row justify-content-center portal-buttons">
