--- a/src/app/components/business-portal-home/business-portal-home.component.scss
+++ b/src/app/components/business-portal-home/business-portal-home.component.scss
@@ -14,20 +14,21 @@
   margin: 0;
   width: 100%;
   min-height: 100vh;
+  z-index: 3;
 }
 
 .top-div {
   position: absolute;
-  height: 50%;
+  overflow: hidden;
+  height: 70%;
   min-width: 100%;
   background-color: var(--accent-color);
-  z-index: -999;
+  opacity: 0.7;
+  z-index: 2;
 }
 
-.cover-photo {
+.top-div img {
   width: 100%;
-  height: 100%;
-  opacity: 0.5;
 }
 
 .business-intro {
@@ -51,7 +52,7 @@
   //margin-top: 350px;
   margin: 0;
   position: absolute;
-  top: 50%;
+  top: 70%;
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
@@ -84,7 +85,7 @@
   text-align: center;
   color: #816df2;
   font-size: large;
-  top: 70%;
+  top: 85%;
 }
 
 .splash-title h2 {
