fix some typos in checkin form

--- a/src/app/components/contact-tracing/contact-tracing.component.html
+++ b/src/app/components/contact-tracing/contact-tracing.component.html
@@ -129,7 +129,7 @@
           <div class="agreement-checkbox">
             <mdb-checkbox formControlName="subscribed">
               <div>
-                Subscribe to recieve news, updates and promotions from BienMenu
+                Subscribe to receive news, updates and promotions from BienMenu
                 or any of BienMenu's partners.
               </div>
             </mdb-checkbox>
