--- a/src/app/components/qr-code-viewer/qr-code-viewer.component.html
+++ b/src/app/components/qr-code-viewer/qr-code-viewer.component.html
@@ -4,8 +4,8 @@
       If you would like a custom QR code tailored specifically for your
       restaurant and brand or if you would like us to print and deliver your QR
       code cards to your restaurant, please contact our sales team at:
-      <a href="mailto:info@bienmenu.com">info@bienmenu.com</a> or give us a call
-      at:<br />
+      <a href="mailto:info@bienmenuapp.com">info@bienmenuapp.com</a> or give us
+      a call at:<br />
       Canada: +1(514)755-9103<br />
       US: +1(214)799-7058
     </div>
